--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "09-calendar-backend",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "index.ts",
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js --exec babel-node",
-        "build": "babel src -d dist",
+        "start": "node --inspect=5858 -r ts-node/register ./server/index.ts",
+        "start:watch": "nodemon",
+        "build": "tsc",
         "postinstall": "npm run build",
         "test": "jest"
     },
@@ -20,9 +20,29 @@
         "@babel/cli": "^7.12.8",
         "@babel/core": "^7.12.9",
         "@babel/node": "^7.12.6",
-        "@babel/preset-env": "^7.12.7",
+        "@babel/preset-typescript": "^7.12.7",
+        "@types/express": "^4.17.9",
+        "@types/jest": "^26.0.15",
+        "@types/node": "^14.14.10",
         "babel-jest": "^26.6.3",
+        "eslint": "^7.14.0",
+        "eslint-plugin-import": "^2.22.1",
         "jest": "^26.6.3",
-        "nodemon": "^2.0.6"
+        "nodemon": "^2.0.6",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.1.2"
+    },
+    "nodemonConfig": {
+        "ignore": [
+            "**/*.test.ts",
+            "**/*.spec.ts",
+            ".git",
+            "node_modules"
+        ],
+        "watch": [
+            "server"
+        ],
+        "exec": "npm start",
+        "ext": "ts"
     }
 }
