--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.ts",
     "scripts": {
         "start": "node --inspect=5858 -r ts-node/register ./server/index.ts",
-        "start:watch": "nodemon",
+        "dev": "nodemon",
         "build": "tsc",
         "postinstall": "npm run build",
         "test": "jest"
@@ -14,7 +14,8 @@
     "license": "ISC",
     "dependencies": {
         "dotenv": "^8.2.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "express-validator": "^6.7.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.8",
