--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dependencies": {
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "express-validator": "^6.7.0"
+        "express-validator": "^6.7.0",
+        "mongoose": "^5.10.16"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.8",
@@ -24,6 +25,7 @@
         "@babel/preset-typescript": "^7.12.7",
         "@types/express": "^4.17.9",
         "@types/jest": "^26.0.15",
+        "@types/mongoose": "^5.10.1",
         "@types/node": "^14.14.10",
         "babel-jest": "^26.6.3",
         "eslint": "^7.14.0",
