--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.0.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.7.0",
@@ -23,6 +24,7 @@
         "@babel/core": "^7.12.9",
         "@babel/node": "^7.12.6",
         "@babel/preset-typescript": "^7.12.7",
+        "@types/bcrypt": "^3.0.0",
         "@types/express": "^4.17.9",
         "@types/jest": "^26.0.15",
         "@types/mongoose": "^5.10.1",
