--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.7.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.16"
     },
     "devDependencies": {
@@ -27,6 +28,7 @@
         "@types/bcrypt": "^3.0.0",
         "@types/express": "^4.17.9",
         "@types/jest": "^26.0.15",
+        "@types/jsonwebtoken": "^8.5.0",
         "@types/mongoose": "^5.10.1",
         "@types/node": "^14.14.10",
         "babel-jest": "^26.6.3",
