--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.0.0",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.7.0",
@@ -26,6 +27,7 @@
         "@babel/node": "^7.12.6",
         "@babel/preset-typescript": "^7.12.7",
         "@types/bcrypt": "^3.0.0",
+        "@types/cors": "^2.8.8",
         "@types/express": "^4.17.9",
         "@types/jest": "^26.0.15",
         "@types/jsonwebtoken": "^8.5.0",
